--- a/GreenMarketBackend/Views/Account/Details.cshtml
+++ b/GreenMarketBackend/Views/Account/Details.cshtml
@@ -10,4 +10,5 @@
     <p><strong>Email:</strong> @Model.Email</p>
     <p><strong>Phone Number:</strong> @Model.PhoneNumber</p>
     <p><strong>Address:</strong> @Model.Address</p>
+    <button class="btn btn-info" onclick="location.href='@Url.Action("StartChatWithUser", "Chat", new { userName = Model.UserName })'">Start Chat with @Model.UserName</button>
 </div>
