--- a/GreenMarketBackend/Views/Checkout/OrderConfirmation.cshtml
+++ b/GreenMarketBackend/Views/Checkout/OrderConfirmation.cshtml
@@ -1,4 +1,5 @@
-﻿@model OrderViewModel
+﻿@using GreenMarketBackend.Models.ViewModels.OrderViewModels;
+
 
 @{
     ViewData["Title"] = "Order Confirmation";
