--- a/GreenMarketBackend/Views/Login/Index.cshtml
+++ b/GreenMarketBackend/Views/Login/Index.cshtml
@@ -32,7 +32,7 @@
 
                 <button type="submit" class="btn btn-success w-100">Login</button>
                 <div class="text-center mt-3">
-                    Don't have an account? <a class="link-primary" asp-controller="Accounts" asp-action="Register">Register</a>
+                    Don't have an account? <a class="link-primary" asp-controller="Register" asp-action="Index">Register</a>
                 </div>
             </form>
 
