--- a/GreenMarketBackend/Views/Shared/_NavBar.cshtml
+++ b/GreenMarketBackend/Views/Shared/_NavBar.cshtml
@@ -26,13 +26,13 @@
                     }
                     else
                     {
-                        <li class="nav-item"><a class="nav-link" asp-controller="Login" asp-action="Index">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-controller="Login" asp-action="Index" style="text-decoration: none ">Login</a></li>
                     }
-                    <li class="nav-item"><a class="nav-link" asp-controller="Products" asp-action="Products">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="About">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Products" asp-action="Products" style="text-decoration: none ">Products</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="About" style="text-decoration: none ">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Contact" style="text-decoration: none ">Contact</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Chat" asp-action="Index">Chat</a>
+                        <a class="nav-link" asp-controller="Chat" asp-action="Index" style="text-decoration: none ">Chat</a>
                     </li>
                     <li class="nav-item">
                     @if (User.Identity.IsAuthenticated)
