--- a/GreenMarketBackend/Views/Products/Index.cshtml
+++ b/GreenMarketBackend/Views/Products/Index.cshtml
@@ -2,21 +2,13 @@
 @model ProductFilterViewModel
 @{
     ViewData["Title"] = "Products";
-    Layout = "~/Views/Shared/_NavBar.cshtml";
+    Layout = "_NavBar";
     var sortOrder = Context.Request.Query["sortOrder"];
 }
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewData["Title"] - Green Market</title>
-    <!-- Bootstrap 5.2.3 CSS -->    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link href="~/css/styles.css" rel="stylesheet">
-</head>
+
 
 <body>
     <!-- Main Content -->
