--- a/GreenMarketBackend/Views/Shared/_Layout.cshtml
+++ b/GreenMarketBackend/Views/Shared/_Layout.cshtml
@@ -28,11 +28,11 @@
                     }
                     else
                     {
-                        <li class="nav-item"><a class="nav-link" asp-controller="Login" asp-action="Index">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-controller="Login" asp-action="Index" style="text-decoration: none ">Login</a></li>
                     }
-                        <li class="nav-item"><a class="nav-link" asp-controller="Products" asp-action="Products">Products</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="About">About Us</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-controller="Products" asp-action="Products" style="text-decoration: none ">Products</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="About" style="text-decoration: none ">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Contact" style="text-decoration: none ">Contact</a></li>
                     </ul>
                 </div>
             </div>
