--- a/GreenMarketBackend/wwwroot/css/styles.css
+++ b/GreenMarketBackend/wwwroot/css/styles.css
@@ -25,7 +25,7 @@ main {
 }
 
 footer {
-    background-color: #198754;
+    background-color: #18871e;
     padding: 0.7rem 0;
     text-align: center;
     width: 100%;
@@ -36,11 +36,12 @@ footer p {
 }
 
 .navbarAcc {
-    background: green;
+    background: #18871e;
 }
 
 .navbar-nav .nav-link {
     color: white !important;
+    text-decoration: none;
 }
 
 .navbar-nav .nav-link:hover {
@@ -119,3 +120,4 @@ input[type="text"] {
 #sendButton:hover {
     background-color: #0056b3;
 }
+
