--- a/GreenMarketBackend/Views/Shared/_Layout.cshtml
+++ b/GreenMarketBackend/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Account" asp-action="Index">Account</a>
+                            <a class="nav-link" asp-controller="Account" asp-action="Index" style="text-decoration: none ">Account</a>
                         </li>
                     }
                     else
