--- a/GreenMarketBackend/Views/Register/Index.cshtml
+++ b/GreenMarketBackend/Views/Register/Index.cshtml
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+
+    @* Password validation *@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation/1.19.3/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+
 </head>
 <body>
     <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
@@ -44,11 +50,13 @@
                     </div>
                     <div class="mb-1">
                         <label for="inputPassword" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="inputPassword" name="Password" autocomplete="new-password" required>
+                        <input asp-for="Password" type="password" class="form-control" id="inputPassword" autocomplete="new-password" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
                         <label for="inputConfirmPassword" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="inputConfirmPassword" name="ConfirmPassword" required>
+                        <input asp-for="ConfirmPassword" type="password" class="form-control" id="inputConfirmPassword" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                     </div>
                     <button type="submit" class="btn btn-success w-100">Register</button>
                     <div class="text-center mt-3">
