--- a/GreenMarketBackend/Views/Login/Index.cshtml
+++ b/GreenMarketBackend/Views/Login/Index.cshtml
@@ -25,6 +25,9 @@
                     <label for="inputPassword" class="form-label">Password</label>
                     <input type="password" class="form-control" id="inputPassword" name="Password" autocomplete="current-password" required>
                 </div>
+                <div class="mb-3">
+                    <a href='@Url.Action("ForgotPassword", "Login")'>Forgot your password?</a>
+                </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="rememberMe" name="RememberMe">
                     <label class="form-check-label" for="rememberMe">Remember Me</label>
