--- a/GreenMarketBackend/Views/Account/Index.cshtml
+++ b/GreenMarketBackend/Views/Account/Index.cshtml
@@ -38,8 +38,9 @@
                     <input asp-for="PhoneNumber" class="form-control" />
                 </div>
                 <button type="submit" class="btn btn-primary">Save Changes</button>
-            </form>
 
+            </form>
+            <button class="btn btn-warning mt-2" onclick="location.href='@Url.Action("ResetPassword", "Account")'">Reset Password</button>
         </div>
 
         <div class="col-md-6">
