AllowAnonymous for forgot password

--- a/GreenMarketBackend/Views/Login/Index.cshtml
+++ b/GreenMarketBackend/Views/Login/Index.cshtml
@@ -38,7 +38,7 @@
                     </div>
                 }
                 <div class="mb-3">
-                    <a href='@Url.Action("ForgotPassword", "Login")'>Forgot your password?</a>
+                    <a href='@Url.Action("ForgotPassword", "Account")'>Forgot your password?</a>
                 </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="rememberMe" name="RememberMe">
