--- a/GreenMarketBackend/Views/Home/Contact.cshtml
+++ b/GreenMarketBackend/Views/Home/Contact.cshtml
@@ -3,7 +3,8 @@
     Layout = "~/Views/Shared/_NavBar.cshtml";
 }
 
-<h2 class="text-center mb-4">Contact Us</h2>
+<div class="m-4">
+    <h2 class="text-center mb-4">Contact Us</h2>
     <form asp-action="Contact" method="post">
         <div class="mb-3">
             <label for="name" class="form-label">Name:</label>
@@ -26,3 +27,4 @@
         <button type="submit" class="btn btn-success">Send Message</button>
     </form>
 </div>
+
