--- a/GreenMarketBackend/wwwroot/css/styles.css
+++ b/GreenMarketBackend/wwwroot/css/styles.css
@@ -101,7 +101,7 @@ footer p {
 
 input[type="text"] {
     width: 100%;
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
