--- a/GreenMarketBackend/Views/Products/MyProducts.cshtml
+++ b/GreenMarketBackend/Views/Products/MyProducts.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "My Products";
     Layout = "_NavBar";
 }
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+</head>
 
 <div class="container mt-5">
     <h2>My Products</h2>
@@ -27,11 +32,57 @@
                     <td>@product.StockQuantity</td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@product.ProductId" class="btn btn-warning">Edit</a>
-                        <a asp-action="Delete" asp-route-id="@product.ProductId" class="btn btn-danger">Delete</a>
+                        <button class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"
+                                data-product-id="@product.ProductId">
+                            Delete
+                        </button>
                     </td>
                 </tr>
             }
         </tbody>
     </table>
 </div>
-    
+
+<!-- Delete Confirmation Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this product?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        let deleteProductId;
+        $('#deleteModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            deleteProductId = button.data('product-id');
+        });
+
+        $('#confirmDeleteButton').click(function () {
+            $.ajax({
+                url: '@Url.Action("Delete", "Products")/' + deleteProductId,
+                type: 'POST',
+                data: {
+                    __RequestVerificationToken: $('input[name="__RequestVerificationToken"]').val()
+                },
+                success: function () {
+                    location.reload(); // Reload the page after deletion
+                }
+            });
+        });
+    </script>
+}
