Forgot password works

--- a/GreenMarketBackend/Views/Account/ChangePassword.cshtml
+++ b/GreenMarketBackend/Views/Account/ChangePassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GreenMarketBackend.Models.ViewModels.AccountViewModels
-@model ResetPasswordViewModel
+@model ChangePasswordViewModel
 
 @{
     ViewData["Title"] = "Change Password";
@@ -7,12 +7,14 @@
 
 <div class="container mt-5">
     <h2>@ViewData["Title"]</h2>
-    <p>@Model.Email</p>
     <p>Please enter your current password and a new password.</p>
 
     <form asp-action="ResetPassword" method="post">
-        <input type="hidden" name="Email" value="@Model.Email" />
-        <input type="hidden" name="Token" value="@Model.Token" />
+        <div class="form-group">
+            <label asp-for="CurrentPassword" class="control-label">Current Password</label>
+            <input asp-for="CurrentPassword" class="form-control" type="password" />
+            <span asp-validation-for="CurrentPassword" class="text-danger"></span>
+        </div>
 
         <div class="form-group">
             <label asp-for="NewPassword" class="control-label">New Password</label>
