--- a/GreenMarketBackend/Views/Products/Create.cshtml
+++ b/GreenMarketBackend/Views/Products/Create.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "Create Product";
     Layout = "~/Views/Shared/_NavBar.cshtml";
 }
-
 <div class="container mt-5">
     <h2>@ViewData["Title"]</h2>
 
@@ -35,10 +34,11 @@
             <span asp-validation-for="StockQuantity" class="text-danger"></span>
         </div>
 
+        <!-- Modify this part for multiple images -->
         <div class="form-group mb-3">
-            <label asp-for="ImageFile" class="form-label"></label>
-            <input asp-for="ImageFile" type="file" class="form-control" />
-            <span asp-validation-for="ImageFile" class="text-danger"></span>
+            <label asp-for="ImageFiles" class="form-label">Upload Images (Minimum 3, Maximum 5)</label>
+            <input asp-for="ImageFiles" type="file" class="form-control" multiple accept="image/*" required="required" />
+            <span asp-validation-for="ImageFiles" class="text-danger"></span>
         </div>
 
         <div class="form-group mb-3">
@@ -68,6 +68,7 @@
         <button type="submit" class="btn btn-success">Upload Product</button>
     </form>
 </div>
+
 
 @section Scripts {
     @{
