--- a/GreenMarketBackend/Views/Products/Details.cshtml
+++ b/GreenMarketBackend/Views/Products/Details.cshtml
@@ -14,8 +14,9 @@
                     <div class="carousel-inner">
                         @for (int i = 0; i < Model.Product.Images.Count; i++)
                         {
+                            var image = Model.Product.Images.ElementAt(i);
                             <div class="carousel-item @(i == 0 ? "active" : "")">
-                                <img src="@Url.Content("~/images/" + Model.Product.Images.ElementAt(i).ImageURL)" class="d-block w-100" alt="@Model.Product.Name">
+                                <img src="@Url.Content("~/images/" + image.ImageUrl)" class="d-block w-100" alt="Product Image">
                             </div>
                         }
                     </div>
