Index product card visual fix

--- a/GreenMarketBackend/Views/Products/Index.cshtml
+++ b/GreenMarketBackend/Views/Products/Index.cshtml
@@ -100,25 +100,32 @@
                 <div class="col-md-4 product-card" data-category="@product.Category.Name" data-price="@product.Price">
                     <div class="card">
                         <a asp-action="Details" asp-route-id="@product.ProductId" class="text-decoration-none text-dark">
-                            @if (product.Images.Any())
+                            @if (product.Images != null && product.Images.Any())
                             {
-                                <img src="@Url.Content("~/images/" + product.Images.First(i => i.IsMain).ImageUrl)" class="card-img-top" alt="@product.Name">
+                                var mainImage = product.Images.FirstOrDefault(i => i.IsMain) ?? product.Images.FirstOrDefault();
+                                var imageUrl = mainImage != null ? Url.Content("~/images/" + mainImage.ImageUrl) : Url.Content("~/images/default-product.png");
+                                <img src="@imageUrl" class="card-img-top" alt="@product.Name">
                             }
                             else
                             {
                                 <img src="~/images/default-product.png" class="card-img-top" alt="@product.Name">
                             }
+                            <div class="card-body">
+                                <h5 class="card-title">@product.Name</h5>
+                                <p class="card-text">@product.Price.ToString("C") - @product.Description</p>
+                                <p class="card-text">Category: @product.Category.Name</p>
+                            </div>
                         </a>
                         <div class="card-body">
                             @if (User.IsInRole("Admin"))
                             {
-@*                                 <form asp-action="Delete" method="post" class="d-inline">
-                                    <input type="hidden" name="id" value="@product.ProductId" />
-                                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>
-                                </form> *@
+                                @*                                 <form asp-action="Delete" method="post" class="d-inline">
+                        <input type="hidden" name="id" value="@product.ProductId" />
+                        <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                        </form> *@
                                 <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal" data-product-id="@product.ProductId">Delete</button>
                             }
-             
+
                         </div>
                     </div>
                 </div>
