--- a/GreenMarketBackend/Views/Products/Edit.cshtml
+++ b/GreenMarketBackend/Views/Products/Edit.cshtml
@@ -12,7 +12,7 @@
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
             <div class="form-group">
@@ -42,6 +42,11 @@
                     {
                         <div class="col-md-3">
                             <img src="@Url.Content("~/images/" + Model.ExistingImageUrls[i])" class="img-thumbnail" alt="Product Image" />
+                            <!-- Checkbox to mark images for removal -->
+                            <div class="form-check">
+                                <input type="checkbox" name="RemoveImages" value="@Model.ExistingImageUrls[i]" class="form-check-input" />
+                                <label class="form-check-label">Remove this image</label>
+                            </div>
                         </div>
                     }
                 </div>
