Adding images works in edit

--- a/GreenMarketBackend/Views/Products/Edit.cshtml
+++ b/GreenMarketBackend/Views/Products/Edit.cshtml
@@ -60,14 +60,12 @@
                         </div>
                     }
                 </div>
-            </div>
 
 
             <!-- Upload new images -->
-            <div class="form-group">
-                <label for="newImages" class="form-label">Upload New Images (Max 5)</label>
-                <input type="file" id="newImages" name="ImageFiles" multiple class="form-control" />
-                <span asp-validation-for="ImageFiles" class="text-danger"></span>
+            <div class="form-group mb-3">
+                <label class="form-label">Add New Images</label>
+                <input type="file" name="ImageFiles" multiple class="form-control" />
             </div>
 
             <div class="form-group">
